fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ main {
 
 /* About Me Section */
 #about-me {
-    padding: 50px 10px;
+    padding: 50px 0px;
     padding-top: 0px;
     background-color: #839791;
     text-align: center;
